# focus-mode-app-linux

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  MANIFEST.in  README.md  config.py  main.py  mkdocs.yml  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  run.sh  setup.py  study-mode-cli.py
.github/workflows/: build-appimage.yml
appimage/: AppRun  focus-mode-app.desktop
cli/: commands.py
core/: blocker.py  notifications.py  restore.py  session.py  storage.py
data/: blocked_apps.json
docs/: architecture.md  contributing.md  index.md
docs/api/: core.md  interfaces.md
focus_mode_app/: __init__.py  cli.py  config.py  main.py
focus_mode_app/api/: __init__.py  auth.py  config.py  launcher.py  logger.py  models.py  notifier.py  server.py  signals.py
focus_mode_app/cli/: __init__.py  commands.py
focus_mode_app/core/: __init__.py  blocker.py  focus_lock.py  ha_client.py  ha_config.py  notifications.py  restore.py  session.py  storage.py  updater.py
focus_mode_app/gui/: __init__.py  ha_settings_dialog.py  main_window.py  main_windowbak.py  material_theme.py
focus_mode_app/utils/: __init__.py  tray_icon.py
gui/: main_window.py
packaging/: focus-mode-app.spec  generate_icon.py  rthook_tcl.py
scripts/: build-appimage-local.sh
tests/: test_api.py  test_ha_client.py
utils/: tray_icon.py
